[project]
name = "ml-engineering-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "fastapi>=0.136.3",
    "jupyter>=1.1.1",
    "mlflow>=3.13.0",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.49.0",
    "wget>=3.2",
]
